# pwndbg-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/: cli.py  gdb_controller.py  server.py  tools_gdb.py  tools_process.py  tools_pwndbg.py  tools_pwntools.py  utils.py
tests/unit/: test_controller_helpers.py  test_pwntools_tools.py  test_utils.py
