[project]
name = "pwndbg-mcp"
version = "0.1.0"
description = "MCP server for GDB/pwndbg debugging and pwntools exploit development"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "gdb", "pwndbg", "pwntools", "debugging", "reverse-engineering", "exploitation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp>=1.0",
    "pygdbmi>=0.11",
    "pwntools>=4.15",
]

[project.urls]
Homepage = "https://github.com/echo8134/pwndbg-mcp"
Repository = "https://github.com/echo8134/pwndbg-mcp"
Issues = "https://github.com/echo8134/pwndbg-mcp/issues"

[project.scripts]
pwndbg-mcp = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["ruff>=0.11", "pyright>=1.1", "pytest>=8.0", "pytest-asyncio>=0.24"]
